--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="confirm_password">Confirm password</string>
     <string name="email">Email</string>
     <string name="register">Register</string>
+    <string name="remember">Remember my username and password.</string>
 
     <string name="error_email_input">Please fill the input with a valid email address.</string>
     <string name="error_name_input">Please fill the input with a valid name.</string>
@@ -22,4 +23,7 @@
     <string name="error_password_eq_username_input">The username and password should not be the same.</string>
     <string name="error_username_exists">This username already exists.</string>
     <string name="error_email_exists">This email already exists.</string>
+    <string name="error_username_empty">Username mandatory.</string>
+    <string name="error_password_empty">Password mandatory.</string>
+    <string name="log_out">Log out</string>
 </resources>
