add camera activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,8 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_index">IndexActivity</string>
+    <string name="search">Search</string>
+    <string name="retake_photo">Retake photo</string>
+    <string name="book_photo">Book photo</string>
+    <string name="book_name">Book name:</string>
 </resources>
