--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,9 @@
     <string name="error_email_exists">This email already exists.</string>
     <string name="error_username_empty">Username mandatory.</string>
     <string name="error_password_empty">Password mandatory.</string>
+    <string name="error_username_non_existent">This username does not exist.</string>
+    <string name="error_password_incorrect">Password incorrect.</string>
+
     <string name="log_out">Log out</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
